force-app/main/default/objects/SX_Courses__c/SX_Courses__c.object-meta.xml
<CustomObject>
    <description>Master list of Schoox LMS Courses</description>
    <label>SX Course</label>
    <nameField>
        <label>Course Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SX Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>