force-app/main/default/objects/SX_Courses__c/fields/CE_Hours__c.field-meta.xml
<CustomField>
    <fullName>CE_Hours__c</fullName>
    <label>CE Hours</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>