force-app/main/default/objects/SX_Courses__c/fields/Membership__c.field-meta.xml
<CustomField>
    <fullName>Membership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Membership</label>
    <referenceTo>Membership__c</referenceTo>
    <relationshipLabel>SX Courses</relationshipLabel>
    <relationshipName>SX_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>