force-app/main/default/objects/SX_Courses__c/fields/SX_Academy_ID__c.field-meta.xml
<CustomField>
    <fullName>SX_Academy_ID__c</fullName>
    <label>SX Academy ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>