force-app/main/default/objects/SX_Courses__c/fields/SX_Course_Active__c.field-meta.xml
<CustomField>
    <fullName>SX_Course_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Course Active</label>
    <type>Checkbox</type>
</CustomField>