force-app/main/default/objects/SX_Courses__c/fields/SX_Course_Description__c.field-meta.xml
<CustomField>
    <fullName>SX_Course_Description__c</fullName>
    <label>Course Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>