force-app/main/default/objects/SX_Courses__c/fields/SX_Course_ID__c.field-meta.xml
<CustomField>
    <fullName>SX_Course_ID__c</fullName>
    <externalId>true</externalId>
    <label>SX Course ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>