force-app/main/default/objects/SX_Courses__c/fields/SX_Course_Image__c.field-meta.xml
<CustomField>
    <fullName>SX_Course_Image__c</fullName>
    <formula>IMAGE(SX_Course_Image_URL__c, Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SX Course Image</label>
    <type>Text</type>
</CustomField>