force-app/main/default/objects/SX_Courses__c/fields/SX_Course_URL__c.field-meta.xml
<CustomField>
    <fullName>SX_Course_URL__c</fullName>
    <label>SX Course URL</label>
    <type>Url</type>
</CustomField>