force-app/main/default/objects/SX_Courses__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>SX_Course_Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>SX_Course_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>